# tesseract

./: .gitignore  LICENSE  README.md  dev.py  flake.nix  package.nix  pyproject.toml
src/tesseract/: __init__.py  __main__.py  analyzer.py  cli.py  detector.py  models.py  utils.py
tests/: __init__.py  test_models.py  test_utils.py  test_video_splitting.py
