[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tesseract"
version = "0.1.0"
description = "A video analysis tool for detecting cuts by analyzing black bar changes"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Jesse Wierzbinski", email = "jesse.wierzbinski@cpluspatch.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = ["opencv-python>=4.11.0", "numpy>=2.3.0", "rich>=14.0.0"]

[project.optional-dependencies]
dev = ["pytest>=8.4.1", "pytest-cov", "black", "isort", "flake8", "mypy"]

[project.scripts]
tesseract = "tesseract.cli:main"

[project.urls]
Homepage = "https://github.com/CPlusPatch/tesseract"
Repository = "https://github.com/CPlusPatch/tesseract"
Issues = "https://github.com/CPlusPatch/tesseract/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist", ".venv", "venv"]
